objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>BookAuthor_del__c</fullName>
        <label>BookAuthor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookDesc_del__c</fullName>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BookPages_del__c</fullName>
        <label>BookPages</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookPrintedBy_del__c</fullName>
        <label>BookPrintedBy</label>
        <length>224</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookReviews_del__c</fullName>
        <label>BookReviews</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Book</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>